[package]
name = "hints"
version = "0.0.1"
edition = "2021"
description = "Library for hinTS"
categories = ["cryptography"]
keywords = ["cryptography"]

[lib]
name = "hints"
path = "src/main/rust/lib.rs"
crate-type = ["cdylib"]


[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[features]

[dependencies]
sha2 = { version = "^0.10.0", default-features = false }
ark-std = { version = "^0.4.0" }
ark-ec = { version = "^0.4.0" }
ark-ff = { version = "^0.4.0" }
ark-poly = { version = "^0.4.0" }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.0", default-features = true }
rand = { version = "^0.8.6" }
rand_chacha = { version = "^0.3.0" }
jni = "0.21.1"
zeroize = "1.8"
