[workspace]
members = [
    "src/main/rust/folding-schemes",
    "src/main/rust/wraps",
    "src/main/rust/ceremony",
    "src/main/rust/groth16",
]
resolver = "2"


[patch.crates-io]
# Update ark-groth16 to latest git version
ark-groth16 = { path = "src/main/rust/groth16" }

# Required dependencies for latest ark-groth16
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-crypto-primitives = { git = "https://github.com/winderica/crypto-primitives", rev = "af003fc" }
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", rev = "ae8283a" }         # "sw-fix-updated" branch
ark-std = { git = "https://github.com/arkworks-rs/std", rev = "73dcad0", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }


# Curve crates also need git versions
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra" }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra" }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/algebra" }

[workspace.package]
edition = "2021"

[workspace.dependencies]
num-bigint = { version = "0.4.3" }
num-integer = { version = "0.1" }
sha3 = { version = "0.10" }
thiserror = { version = "1.0" }
blake2 = { version = "0.10.6" }
digest = "0.10.7"
rand = "0.8.5"
rand_chacha = "0.3.1"

# Arkworks family
ark-crypto-primitives = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-groth16 = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-poly-commit = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false }
ark-relations = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false }
ark-snark = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }

ark-bn254 = { version = "^0.5.0", default-features = false }
ark-ed-on-bn254 = { version = "^0.5.0", default-features = false }
ark-grumpkin = { version = "^0.5.0", default-features = false }
ark-mnt4-298 = { version = "^0.5.0", default-features = false }
ark-mnt6-298 = { version = "^0.5.0", default-features = false }
ark-pallas = { version = "^0.5.0", default-features = false }
ark-vesta = { version = "^0.5.0", default-features = false }

# Local crates
folding-schemes = { path = "src/main/rust/folding-schemes", default-features = false }

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
lto = "fat"
strip = true
debug = false
opt-level = 3
codegen-units = 1
